# botatouille

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  NGROK_SETUP.md  QUICK_START.md  RAILWAY_DEPLOY.md  README.md  SETUP.md  TESTING.md  main.py  pyproject.toml  start.sh
app/: __init__.py  main.py
app/api/: webhook.py
app/core/: config.py  constants.py
app/models/: whatsapp.py
app/services/: llm.py
docs/: WEEK1_COMPLETE.md
examples/: demo_webhook.py  demo_webhook_local.py
tests/: conftest.py  test_llm.py  test_llm_service.py  test_webhook_api.py
